--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.beardedhen:androidbootstrap:2.3.1'
+    compile 'com.roughike:bottom-bar:2.3.1'
     compile files('libs/commons-io-2.5.jar')
 }
