--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.aditya.filebrowser"
+        //applicationId "com.aditya.filebrowser"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
