--- a/filebrowser/src/main/AndroidManifest.xml
+++ b/filebrowser/src/main/AndroidManifest.xml
@@ -7,11 +7,13 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".FileBrowser" />
-        <activity android:name=".FileChooser" />
-        <activity android:name=".FileBrowserWithCustomHandler" />
+        android:supportsRtl="true">
+        <activity android:name=".FileBrowser"
+            android:theme="@style/FileBrowserTheme"/>
+        <activity android:name=".FileChooser"
+            android:theme="@style/FileBrowserTheme"/>
+        <activity android:name=".FileBrowserWithCustomHandler"
+            android:theme="@style/FileBrowserTheme"/>
         <activity android:name=".utils.Permissions" android:theme="@style/Theme.AppCompat.Translucent" />
     </application>
 
