--- a/filebrowser/src/main/AndroidManifest.xml
+++ b/filebrowser/src/main/AndroidManifest.xml
@@ -9,11 +9,26 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
         <activity android:name=".FileBrowser"
-            android:theme="@style/FileBrowserTheme"/>
+            android:theme="@style/FileBrowserTheme">
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable">
+            </meta-data>
+        </activity>
         <activity android:name=".FileChooser"
-            android:theme="@style/FileBrowserTheme"/>
+            android:theme="@style/FileBrowserTheme">
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable">
+            </meta-data>
+        </activity>
         <activity android:name=".FileBrowserWithCustomHandler"
-            android:theme="@style/FileBrowserTheme"/>
+            android:theme="@style/FileBrowserTheme">
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable">
+            </meta-data>
+        </activity>
         <activity android:name=".utils.Permissions" android:theme="@style/Theme.AppCompat.Translucent" />
     </application>
 
