--- a/filebrowser/build.gradle
+++ b/filebrowser/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.library'
 ext {
     PUBLISH_GROUP_ID = 'com.adityak'
     PUBLISH_ARTIFACT_ID = 'browsemyfiles'
-    PUBLISH_VERSION = '1.3'
+    PUBLISH_VERSION = '1.4'
 }
 
 android {
@@ -14,8 +14,8 @@ android {
         //applicationId "com.aditya.filebrowser"
         minSdkVersion 15
         targetSdkVersion 25
-        versionCode 4
-        versionName "1.3"
+        versionCode 5
+        versionName "1.4"
     }
     buildTypes {
         release {
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.0'
     compile 'com.beardedhen:androidbootstrap:2.3.1'
     compile 'com.roughike:bottom-bar:2.3.1'
+    compile 'com.simplecityapps:recyclerview-fastscroll:1.0.14'
     compile files('libs/commons-io-2.5.jar')
 }
 
