--- a/filebrowser/src/main/AndroidManifest.xml
+++ b/filebrowser/src/main/AndroidManifest.xml
@@ -30,6 +30,15 @@
             </meta-data>
         </activity>
         <activity android:name=".utils.Permissions" android:theme="@style/Theme.AppCompat.Translucent" />
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.aditya.filebrowser.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"/>
+        </provider>
     </application>
 
 </manifest>
