--- a/filebrowser/src/main/AndroidManifest.xml
+++ b/filebrowser/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         <activity android:name=".utils.Permissions" android:theme="@style/Theme.AppCompat.Translucent" />
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.aditya.filebrowser.provider"
+            android:authorities="@string/aditya_filebrowser_provider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
