--- a/sample/Test/app/build.gradle
+++ b/sample/Test/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation 'com.android.support:support-media-compat:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation project(":filebrowser-debug")
     //implementation project(":filebrowser")
-    implementation 'com.adityak:browsemyfiles:1.9'
+    //implementation 'com.adityak:browsemyfiles:1.9'
 }
